--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="#030608">
+    android:background="@color/dark_blue">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="14dp"
-        android:layout_gravity="center"
-        android:layout_margin="8dp"/>
+       android:layout_marginTop="10dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/tmdb_title"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="3dp">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -36,22 +38,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:padding="5dp"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="5dp"
                     android:background="@drawable/mortal"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="3dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:padding="3dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_popular"
+                        android:layout_marginTop="3dp"
                         android:textStyle="bold"
-                        android:textSize="12dp" />
+                        android:textSize="14dp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerview_popular"
@@ -66,15 +72,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="3dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:padding="3dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_playing"
+                        android:layout_marginTop="3dp"
                         android:textStyle="bold"
-                        android:textSize="12dp" />
+                        android:textSize="14dp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerview_playing"
@@ -89,15 +97,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="3dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:padding="3dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_top"
+                        android:layout_marginTop="3dp"
                         android:textStyle="bold"
-                        android:textSize="12dp" />
+                        android:textSize="14dp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerview_top"
@@ -112,15 +122,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_margin="3dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginRight="3dp"
                     android:padding="3dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/string_upcoming"
+                        android:layout_marginTop="3dp"
                         android:textStyle="bold"
-                        android:textSize="12dp" />
+                        android:textSize="14dp" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerview_upcoming"
