--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -3,22 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".MovieDetailsActivity"
     android:orientation="vertical"
-    android:layout_margin="5dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@color/dark_blue">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:text="Movie Details"
-        android:textSize="19dp"
-        android:layout_marginTop="10dp"
-        android:padding="5dp"
-        android:gravity="center"
-        android:background="@color/cardview_light_background"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Movie Details"
+            android:textSize="19dp"
+            android:padding="8dp"
+            android:layout_margin="2dp"
+            android:gravity="center"
+            android:background="@drawable/title"/>
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/logo"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="10dp"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,23 +52,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:layout_margin="5dp"
-                    android:padding="8dp">
+                    android:padding="3dp"
+                    android:layout_marginTop="3dp">
 
-                    <ImageView
-                        android:id="@+id/image"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp" />
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <ImageView
+                            android:id="@+id/image"
+                            android:layout_width="200dp"
+                            android:layout_height="250dp"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="15dp"/>
+
+                        <TextView
+                            android:id="@+id/txt_vote_average"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:gravity="center"
+                            android:textStyle="bold"
+                            android:textSize="16dp"
+                            android:textColor="@color/white"
+                            android:background="@drawable/gradient"
+                            android:layout_marginBottom="30dp"
+                            android:layout_marginRight="-8dp"
+                            android:layout_alignBottom="@+id/image"
+                            android:layout_alignRight="@+id/image"/>
+
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:orientation="vertical"
-                        android:layout_marginLeft="5dp">
+                        android:layout_marginLeft="2dp">
 
                         <TextView
                             android:id="@+id/txt_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:textSize="16dp" />
+
+                        <TextView
+                            android:id="@+id/txt_language"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="14dp" />
@@ -65,15 +107,7 @@
                             android:id="@+id/txt_release_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/cardview_dark_background"
-                            android:textSize="12dp"
-                            android:layout_marginTop="10dp" />
-
-                        <TextView
-                            android:id="@+id/txt_vote_average"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textColor="@color/purple_200"
+                            android:textColor="@color/light_blue"
                             android:textSize="12dp"
                             android:layout_marginTop="10dp" />
 
@@ -87,11 +121,22 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Overview"
+                        android:textSize="14dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/white"
+                        android:padding="5dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="5dp"/>
+
+                    <TextView
                         android:id="@+id/txt_overview"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"                         android:textSize="14dp"
                         android:padding="5dp"
-                        android:layout_margin="10dp" />
+                        android:layout_margin="5dp" />
 
                 </LinearLayout>
 
